data/issues_nolabel/nolabel_test_19203.txt
Build Tensorflow 1.7 on Cuda 8.0

Hi I am trying to build tensorflow r1.7 branch with the following settings:

cuda 8.0
cudnn 7.0
gcc 5.4

but i got the following error:
tensorflow/core/kernels/neon/neon_depthwise_conv_op.cc:138:42:   required from here
./tensorflow/core/kernels/neon/depthwiseconv_float.h:602:7: warning: variable 'fixed_input_depth' set
 but not used [-Wunused-but-set-variable]
   int fixed_input_depth = 0;
       ^
INFO: From Compiling tensorflow/core/kernels/dynamic_partition_op_gpu.cu.cc:
tensorflow/core/kernels/dynamic_partition_op_gpu.cu.cc(113): warning: function "tensorflow::<unnamed>::IdentityOp::operator()" was declared but never referenced

tensorflow/core/kernels/dynamic_partition_op_gpu.cu.cc(155): warning: function "tensorflow::<unnamed>::BoundedOutputIterator::operator*" was declared but never referenced

tensorflow/core/kernels/dynamic_partition_op_gpu.cu.cc(165): warning: function "tensorflow::<unnamed>::BoundedOutputIterator::operator+" was declared but never referenced

tensorflow/core/kernels/dynamic_partition_op_gpu.cu.cc(171): warning: function "tensorflow::<unnamed>::BoundedOutputIterator::operator-" was declared but never referenced

./tensorflow/core/kernels/gather_functor_gpu.cu.h(57): error: calling a __host__ function("__builtin_
expect") from a __global__ function("tensorflow::GatherOpKernel< ::Eigen::half, int, (bool)1> ") is n
ot allowed

./tensorflow/core/kernels/gather_functor_gpu.cu.h(57): error: calling a __host__ function("__builtin_
expect") from a __global__ function("tensorflow::GatherOpKernel<float, int, (bool)1> ") is not allowe
d

./tensorflow/core/kernels/gather_functor_gpu.cu.h(57): error: calling a __host__ function("__builtin_
expect") from a __global__ function("tensorflow::GatherOpKernel<double, int, (bool)1> ") is not allow
ed

./tensorflow/core/kernels/gather_functor_gpu.cu.h(57): error: calling a __host__ function("__builtin_
expect") from a __global__ function("tensorflow::GatherOpKernel< ::std::complex<float> , int, (bool)1
> ") is not allowed

./tensorflow/core/kernels/gather_functor_gpu.cu.h(57): error: calling a __host__ function("__builtin_
expect") from a __global__ function("tensorflow::GatherOpKernel< ::std::complex<double> , int, (bool)
1> ") is not allowed

5 errors detected in the compilation of "/tmp/tmpxft_00004427_00000000-7_dynamic_partition_op_gpu.cu.
cpp1.ii".
ERROR: /home/ubuntu/tensorflow/tensorflow/core/kernels/BUILD:1702:1: output 'tensorflow/core/kernels/
_objs/dynamic_partition_op_gpu/tensorflow/core/kernels/dynamic_partition_op_gpu.cu.pic.o' was not cre
ated
ERROR: /home/ubuntu/tensorflow/tensorflow/core/kernels/BUILD:1702:1: not all outputs were created or
valid
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 770.936s, Critical Path: 154.34s
INFO: 1470 processes, local.
FAILED: Build did NOT complete successfully